# new_admin_panel_sprint_1

./: .gitignore
movies_admin/: pyproject.toml
movies_admin/config/: .env.example  settings.py
movies_admin/movies/: admin.py  choices.py  models.py
movies_admin/movies/locale/en/LC_MESSAGES/: django.po
movies_admin/movies/locale/ru/LC_MESSAGES/: django.po
movies_admin/movies/migrations/: 0001_initial.py  0002_filmwork_file_path.py  0003_person_film_works_role_choices.py  0004_removed_null_true.py  0005_indexes_for_movies_db.py
schema_design/: movies_database.ddl
sqlite_to_postgres/: .env.example  README.md  config.py  dto.py  etl.py  extractor.py  load_data.py  pyproject.toml  saver.py  transformer.py
sqlite_to_postgres/dto/: __init__.py  pg_dto.py  sqlite_dto.py  transform_dto.py
sqlite_to_postgres/tests/: check_consistency.py
